crates/edgezero-macros/tests/ui/secret_with_serde_flatten.stderr
error: `#[secret]` is incompatible with `#[serde(flatten)]` — the derive emits the Rust field name verbatim and config validate / push round-trip it via TOML
 --> tests/ui/secret_with_serde_flatten.rs:6:5
  |
6 |     #[serde(flatten)]
  |     ^^^^^^^^^^^^^^^^^
